--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -14,28 +14,58 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="color:rgb(104, 104, 104) !important;">機車行車安全系統</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">首頁</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">公開統計數據</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">帳號登入</a>
-        </li>
-      </ul>
-      <span class="navbar-text"> Under Development by Qi Xiang</span>
-    </div>
-  </nav>
+  <div class="container-fluid navbar-container sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+      <a class="navbar-brand" href="https://qi-xiang.github.io/ProjectWebsite/">BykE</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <div class="cool-link">
+              <a class="nav-link" href="https://qi-xiang.github.io/ProjectWebsite/">首頁</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <div class="cool-link">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+                關於我們
+              </a>
+            </div>
+            <div class="dropdown-menu" style="margin-top: 0;">
+              <a class="dropdown-item" href="https://qi-xiang.github.io/ProjectWebsite/#about">關於我們</a>
+              <a class="dropdown-item" href="https://qi-xiang.github.io/ProjectWebsite/#service">服務內容</a>
+              <a class="dropdown-item" href="https://qi-xiang.github.io/ProjectWebsite/#product">產品特色</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="cool-link">
+              <a class="nav-link" href="#">公開統計數據</a>
+            </div>
+          </li>
+          <li class="nav-item active">
+            <div class="cool-link">
+              <a class="nav-link"
+                href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/login_seperation.html">會員專區</a>
+            </div>
+          </li>
+          <li class="nav-item active" href="#">
+            <div class="cool-link">
+              <a class="nav-link" href="https://qi-xiang.github.io/ProjectWebsite/#question">常見問答</a>
+            </div>
+          </li>
+          <li class="nav-item active">
+            <div class="cool-link">
+              <a class="nav-link" href="https://qi-xiang.github.io/ProjectWebsite/#contact">聯絡我們</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 
   <div class="container-fluid py-5" style="padding-bottom: 0px !important;">
     <div class="row" style="display: none;">
@@ -258,19 +288,19 @@
             <li class="page-item"><a class="page-link lastBtn">&laquo; 上10筆</a></li>
             <li class="disabled" style="margin: 0 5px 0 5px;">
               <div class="dropdown dropdownContainer">
-                <a class="page-link btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown"
-                  aria-expanded="false" data-toggle2="tooltip" data-placement="top"
+                <a class="page-link btn btn-secondary dropdown-toggle graph-dropdown-toggle" role="button"
+                  data-toggle="dropdown" aria-expanded="false" data-toggle2="tooltip" data-placement="top"
                   title="請選擇資料類型">
                   平均速度
                 </a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" id="avg_speed_dropdown">平均速度</a>
-                  <a class="dropdown-item" id="avg_acceleration_dropdown">平均加速度</a>
-                  <a class="dropdown-item" id="avg_distance_dropdown">平均車距</a>
-                  <a class="dropdown-item" id="avg_speed_vio_count_dropdown">速度違規次數</a>
-                  <a class="dropdown-item" id="avg_acceleration_vio_count_dropdown">加速度違規次數</a>
-                  <a class="dropdown-item" id="avg_distance_vio_count_dropdown">車距違規次數</a>
-                  <a class="dropdown-item" id="safety_score_dropdown">安全分數</a>
+                <div class="dropdown-menu graph-dropdown-menu">
+                  <a class="dropdown-item graph-dropdown-item" id="avg_speed_dropdown">平均速度</a>
+                  <a class="dropdown-item graph-dropdown-item" id="avg_acceleration_dropdown">平均加速度</a>
+                  <a class="dropdown-item graph-dropdown-item" id="avg_distance_dropdown">平均車距</a>
+                  <a class="dropdown-item graph-dropdown-item" id="avg_speed_vio_count_dropdown">速度違規次數</a>
+                  <a class="dropdown-item graph-dropdown-item" id="avg_acceleration_vio_count_dropdown">加速度違規次數</a>
+                  <a class="dropdown-item graph-dropdown-item" id="avg_distance_vio_count_dropdown">車距違規次數</a>
+                  <a class="dropdown-item graph-dropdown-item" id="safety_score_dropdown">安全分數</a>
                 </div>
               </div>
             <li class="page-item"><a class="page-link nextBtn">下10筆 &raquo;</a></li>
@@ -384,4 +414,5 @@
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
 <script type="module" src="src/js/min_js/dataVisualization.min.js"></script>
+
 </html>
