--- a/FireBaseDemo/insuranceCompany_login.html
+++ b/FireBaseDemo/insuranceCompany_login.html
@@ -36,7 +36,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<div class="login100-form-title" style="background-image: url(images/bg-01.png);">
+				<div class="login100-form-title" style="background-image: url(https://picsum.photos/id/1050/1024/768);">
 					<span class="login100-form-title-1">
 						保險公司登入
 					</span>
