--- a/FireBaseDemo/Government.html
+++ b/FireBaseDemo/Government.html
@@ -9,35 +9,72 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/800089fd93.js" crossorigin="anonymous"></script>
     <title>政府違規用戶檢視</title>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">機車行車安全系統</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">首頁</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">公開統計數據</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">帳號登入</a>
-                </li>
-            </ul>
-            <span class="navbar-text"> Under Development by Qi Xiang</span>
-        </div>
-    </nav>
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    
+    <div class="container-fluid navbar-container sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+            <a class="navbar-brand" href="https://qi-xiang.github.io/ProjectWebsite/">BykE</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <div class="jumbotron jumbotron-fluid">
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <div class="cool-link">
+                            <a class="nav-link" href="https://qi-xiang.github.io/ProjectWebsite/">首頁</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <div class="cool-link">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                                aria-expanded="false">
+                                關於我們
+                            </a>
+                        </div>
+                        <div class="dropdown-menu" style="margin-top: 0;">
+                            <a class="dropdown-item" href="https://qi-xiang.github.io/ProjectWebsite/#about">關於我們</a>
+                            <a class="dropdown-item" href="https://qi-xiang.github.io/ProjectWebsite/#service">服務內容</a>
+                            <a class="dropdown-item" href="https://qi-xiang.github.io/ProjectWebsite/#product">產品特色</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="cool-link">
+                            <a class="nav-link" href="#">公開統計數據</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <div class="cool-link">
+                            <a class="nav-link"
+                                href="https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/login_seperation.html">會員專區</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active" href="#">
+                        <div class="cool-link">
+                            <a class="nav-link" href="https://qi-xiang.github.io/ProjectWebsite/#question">常見問答</a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <div class="cool-link">
+                            <a class="nav-link" href="https://qi-xiang.github.io/ProjectWebsite/#contact">聯絡我們</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid mb-0">
         <div class="container">
             <h1 class="display-4 companyName">政府主管機關</h1>
             <p class="lead companySlogan">歡迎使用機車安全系統</p>
@@ -45,7 +82,13 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5">
+    <div class="col-12 common-section" style="background-color: #EFF5F5;">
+        <h1 class="section-title">限制用戶檢視</h1>
+        <hr class="section-divider" />
+        <p class="section-description">所有限制用戶整理如下方表格。</p>
+    </div>
+
+    <div class="container-fluid pt-0 py-3" style="background-color: #EFF5F5;">
         <div class="row">
             <div class="table-responsive col-12" style="padding: 0 5% 0 5%;">
                 <table id="table-demo" class="customer-table table table-hover table-borderless">
@@ -66,16 +109,18 @@
         </div>
     </div>
 
-    <div class="container py-1">
-        <!-- Footer -->
-        <footer class="page-footer font-small">
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">© 2022 Copyright:
-                <a href="https://qi-xiang.github.io/">Qi Xiang</a>
+    <div class="container-fluid footer" style="background-color: #222F33;">
+        <div class="row">
+            <div class="col-12" style="padding-top: 15px;">
+                <div class="d-flex justify-content-center">
+                    <a href="https://github.com/QI-XIANG"><img class="feature-img" src="src/img/25231.png" width="45px"
+                            height="45px" alt="img"></a>
+                </div>
             </div>
-            <!-- Copyright -->
-        </footer>
-        <!-- Footer -->
+            <div class="col-12" style="color: #fff;text-align:center;padding: 10px 0 20px;">
+                © 2022 Copyright: Qi Xiang
+            </div>
+        </div>
     </div>
 
     <!-- Loading square for squar.red network -->
@@ -97,6 +142,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
     <link rel="stylesheet" href="src/css/insurance_company.css">
     </link>
+    <script src="src/js/backToTop.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="module" src="src/js/min_js/government.min.js"></script>
@@ -114,5 +160,97 @@
     div#nav a.active {
         background-color: #d1d1d1;
     }
+
+    /*導覽列*/
+    .navbar-container {
+        padding: 0 !important;
+        background-color: #2c2c2c;
+    }
+
+    .custom-navbar {
+        background-color: #2c2c2c;
+    }
+
+    .custom-navbar a.nav-link {
+        color: #fff !important;
+        text-align: center;
+    }
+
+    .custom-navbar .navbar-brand {
+        color: #fff !important;
+    }
+
+    .navbar-container .dropdown:hover .dropdown-menu {
+        display: block;
+    }
+
+    .navbar-container .dropdown-item {
+        color: black !important;
+    }
+
+    @media (min-width: 992px) {
+        .cool-link::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 2px;
+            margin-top: -5px;
+            background: #fff;
+            transition: width .3s;
+        }
+
+        .cool-link:hover::after {
+            width: 100%;
+            transition: width .3s;
+        }
+
+    }
+
+    @media (max-width: 991px) {
+        .navbar-container .dropdown-menu .dropdown-item {
+            text-align: center;
+        }
+    }
+
+    #btn-back-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: none;
+        z-index: 999;
+        background-color: #1dc8cd;
+        opacity: 0.7;
+        border: none;
+    }
+
+    /*通用區塊設定*/
+    .common-section {
+        padding-top: 24px;
+        padding-bottom: 8px;
+    }
+
+    .padding-0 {
+        padding: 0 !important;
+    }
+
+    .opacity-0 {
+        opacity: 0;
+    }
+
+    .section-title {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    .section-description {
+        text-align: center;
+        color: #777;
+    }
+
+    .section-divider {
+        border-top: 2px solid #222F33;
+        width: 100px;
+    }
 </style>
+
 </html>
