--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -9,11 +9,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
-
+    <script src="https://kit.fontawesome.com/800089fd93.js" crossorigin="anonymous"></script>
     <title>登入分流頁面</title>
 </head>
 
 <body>
+
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 
     <div class="container-fluid navbar-container sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
@@ -155,6 +160,7 @@
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
     crossorigin="anonymous"></script>
 <link href="src/css/login_seperation.css" rel="stylesheet">
+<script src="src/js/backToTop.js"></script>
 <script>
     if (window.screen.width <= 991) {
         $(".dropdown-toggle").click(function () {
