--- a/FireBaseDemo/login_seperation.html
+++ b/FireBaseDemo/login_seperation.html
@@ -161,7 +161,7 @@
     crossorigin="anonymous"></script>
 <link href="src/css/login_seperation.css" rel="stylesheet">
 <script src="src/js/backToTop.js"></script>
-<script>
+<!--<script>
     if (window.screen.width <= 991) {
         $(".dropdown-toggle").click(function () {
             $(".dropdown-menu").toggle();
@@ -170,6 +170,5 @@
 
     console.log(window.screen.width)
     $(".dropdown-toggle:hover .dropdown-menu").show();
-</script>
-
+</script>-->
 </html>
