--- a/FireBaseDemo/publicData.html
+++ b/FireBaseDemo/publicData.html
@@ -123,6 +123,8 @@
       </div>  
     </div>
   </div>
+  
+  <div id="other_safety_score" style="display: none;"></div>
 
   <!--其他車友資料-->
   <div class="container-fluid common-section other_data_dashboard py-3 ml-auto mr-auto"
